# StrawberryRemote

./: CMakeLists.txt  connection.cpp  connection.h  connectionstatus.cpp  connectionstatus.h  connectionstatus.ui  controller.cpp  controller.h  incomingmsg.cpp  incomingmsg.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagewindow.cpp  messagewindow.h  messagewindow.ui  outgoingmsg.cpp  outgoingmsg.h  player.cpp  player.h  player.ui  player.xml
proto/: CMakeLists.txt  RemoteMessages.proto
